# plugins-creater

./: .editorconfig  .gitignore  CLAUDE.md  INTEGRATION_SUMMARY.md  Makefile  README.md  pyproject.toml  verify.sh
.github/workflows/: validate.yml
claude-switch/: README.md  claude-switch  install.sh
codex-switch/: README.md  codex-switch  install.sh
config/: app.yaml  plugin-types.yaml
config/claude-switch/: profiles.json
config/defaults/: agent-tool.yaml  llm-skill.yaml  shell-script.yaml
docker/testbox/: Dockerfile
docs/: assistant-memory.md  tool-checklist.md
docs/architecture/: overview.md
docs/conventions/: naming.md  versioning.md
docs/guides/: claude-switch.md  create-agent-plugin.md  create-shell-plugin.md  create-skill-plugin.md  getting-started.md  testbox.md  tools-management.md
examples/agent-researcher/: README.md
examples/shell-hello/: README.md
examples/skill-summarizer/: README.md
plugins/: README.md
registry/schemas/: plugin.schema.json  skill.schema.json
scripts/: bootstrap.sh  doctor.sh  generate.sh  install-tools.sh  release.sh
sing-box-installer/: README.md  change-uuid.sh
src/plugins_creater/: cli.py
src/plugins_creater/core/: __init__.py
src/plugins_creater/generators/: __init__.py  agent_tool.py  llm_skill.py  shell_script.py
templates/agent-tool/: plugin.yaml.tmpl
templates/common/: README.md.tmpl
templates/llm-skill/: skill.yaml.tmpl
templates/shell-script/: plugin.yaml.tmpl
testbox/: README.md  testbox
tools/: README.md  STRUCTURE.txt
tools/codex-switch/: Cargo.toml  README.md  install.sh
(+10 files in other folders)
