[project]
name = "plugins-creater"
version = "0.1.0"
description = "用于 Shell 工具、Agent 工具与大模型 Skill 的脚手架与生成器工作区"
requires-python = ">=3.10"

[project.scripts]
pc = "plugins_creater.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
